[package]
name = "umthombo"
description = "A crate for selecting between producers of futures"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waker-fn = "1.1.0"
spinny = "0.2.0"
pin-project-lite = "0.1"
flume = { git = "https://github.com/Restioson/flume", branch = "into_send_async", optional = true }
barrage = { version = "0.2.1", optional = true }

[target.'cfg(loom)'.dependencies.loom]
version = "0.3.5"
features = ["futures"]

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync"] }

[features]
with-barrage = ["barrage"]
with-flume = ["flume"]
